Microservices/general/ingress/helloworld-app-v2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-app-v2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "gkeapps.<dns-internal-name>"
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: helloworld
            port:
              number: 80
